--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -19,12 +19,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1",
-    "react-router-dom": "^4.3.1",
-    "axios": "^0.18.0"
+    "mongoose": "^5.4.11"
   }
 }
