--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "axios": "^0.18.0",
+    "contentful": "^7.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.11"
