--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -19,11 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "axios": "^0.18.0",
     "contentful": "^7.2.0",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
+    "material-ui": "^1.0.0-beta.47",
     "mongoose": "^5.4.11"
   }
 }
